--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "util": "^0.12.3",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
