--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --exec babel-node index.js",
+    "dev": "nodemon index.js",
     "build": "babel index.js -d dist"
   },
   "keywords": [],
