--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.863.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.24.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validation": "^3.0.7",
     "http-status": "^1.5.0",
@@ -24,9 +26,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "multer-s3": "^2.9.0",
     "util": "^0.12.3",
-    "validator": "^13.5.2",
-    "dotenv": "^8.2.0"
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
